--- a/etc/automaton.html
+++ b/etc/automaton.html
@@ -155,7 +155,7 @@ function dot(x, y)
 </head>
 <body>
 <h1>one-dimensional cellular automaton.</h1>
-<p>only chrome16 known compatible browser.</p>
+<p>only <span style="color: green; font-weight: bold;">chrome16</span> known compatible browser.</p>
 <p>Rule number [1-255]: <input type="number" value="18" id="rule_number" /></p>
 <p>ref. <a href="http://d.hatena.ne.jp/aidiary/20120113/1326464820">http://d.hatena.ne.jp/aidiary/20120113/1326464820</a></p>
 <canvas id="canv" width="1000" height="600"></canvas>
