タイトルを修正

--- a/etc/chess2.html
+++ b/etc/chess2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>chess</title>
+        <title>n queen</title>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="nqueen.js"></script>
