--- a/etc/chess2.html
+++ b/etc/chess2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>n queen</title>
+        <title>n queen test</title>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="nqueen.js"></script>
@@ -18,4 +18,3 @@
         <div id="debug" style="clear: both;"></div>
     </body>
 </html>
-
